<resources>
    <string name="app_name">GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="addItem">Add First Item</string>
    <string name="enterGrocery">Enter Grocery</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="hint_quantity">Enter Quatity</string>
    <string name="saveButton">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="areyousure">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_grocery">Edit Grocery</string>
</resources>
