<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id"
    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enterGrocery"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groceryItem"
                android:layout_marginTop="15dp"
                android:layout_below="@id/title"
                android:textColor="@android:color/background_dark"
                android:hint="@string/hint_item"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groceryQuatity"
                android:layout_marginTop="15dp"
                android:layout_below="@id/groceryItem"
                android:hint="@string/hint_quantity"
                android:textColor="@android:color/background_dark"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id = "@+id/saveButton"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_below="@id/groceryQuatity"
                android:text="@string/saveButton"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>