<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="23dp"

        >

        <TextView
            android:id="@+id/textAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:text="@string/areyousure"
            android:textColor="@android:color/background_dark"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/noButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textAlert"
            android:layout_marginTop="19dp"
            android:background="@color/colorAccent"
            android:text="@string/no"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/yes"
            android:id="@+id/yesButton"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_alignBottom="@id/noButton"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>